{
  "version": 4,
  "terraform_version": "1.13.5",
  "serial": 297,
  "lineage": "f1a513b9-4ef8-741a-6bdb-8646355e157c",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2025-11-21T15:42:15.593-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/spark-automation-1763590375/global/firewalls/spark-allow-internal",
            "log_config": [],
            "name": "spark-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/spark-automation-1763590375/global/networks/spark-vpc",
            "params": [],
            "priority": 1000,
            "project": "spark-automation-1763590375",
            "self_link": "https://www.googleapis.com/compute/v1/projects/spark-automation-1763590375/global/firewalls/spark-allow-internal",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "spark"
            ],
            "target_service_accounts": [],
            "target_tags": [
              "spark"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh_spark",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "8080",
                  "8081",
                  "4040",
                  "7077"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-11-21T15:42:15.510-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/spark-automation-1763590375/global/firewalls/allow-ssh-spark",
            "log_config": [],
            "name": "allow-ssh-spark",
            "network": "https://www.googleapis.com/compute/v1/projects/spark-automation-1763590375/global/networks/spark-vpc",
            "params": [],
            "priority": 1000,
            "project": "spark-automation-1763590375",
            "self_link": "https://www.googleapis.com/compute/v1/projects/spark-automation-1763590375/global/firewalls/allow-ssh-spark",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "spark"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "edge",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "SEV_CAPABLE",
                  "SEV_SNP_CAPABLE",
                  "SEV_LIVE_MIGRATABLE",
                  "SEV_LIVE_MIGRATABLE_V2",
                  "IDPF",
                  "TDX_CAPABLE",
                  "UEFI_COMPATIBLE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20251120",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/spark-automation-1763590375/zones/us-central1-a/disks/spark-edge"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-11-21T15:42:18.629-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/spark-automation-1763590375/zones/us-central1-a/instances/spark-edge",
            "instance_id": "7718376183285237301",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQCrSUbxFuahyP9ta45nK8oe916Svu5H0JXiVvnz85gc37R61QNvYq3vE3xJ7MA2kqxPHHjlDlVKx6FlD41lQBdhXBSfZ1k5jfygcUz2iYZ/6utaSQibCyCdwO1VmLkjrzg0vV99XIFPIMF4JmEyTvON8rrbXBMOKAo2V94cLSLwdSkCn10ProOUdRHOq3OmjYS4ZJeMw7sr1Pvu5jWAfduOlHx2ZqgqnA46283EZuq7Vld7FKeGb2zjrtGD6WMo1mvt4WvAoBf/Fmntop3CgXQhm+/nR8LapnK18d7xJcZcRGozdQycOSEW66Hx0U1bJ/7bcoKtwleMWNUCvwX0qjrDiSMiD0dVk9GdmzlYPrfDJPOivTme2TWMi27s52ozUTzcEhJTeBlBBWCcRcBmAi4VAlCMGYoQDhYXHe6lH5x1JT [...]
            },
            "metadata_fingerprint": "qAxAOUUeVpU=",
            "name": "spark-edge",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.188.180.34",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/spark-automation-1763590375/global/networks/spark-vpc",
                "network_ip": "10.128.0.4",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/spark-automation-1763590375/regions/us-central1/subnetworks/spark-vpc",
                "subnetwork_project": "spark-automation-1763590375"
              }
            ],
            "project": "spark-automation-1763590375",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/spark-automation-1763590375/zones/us-central1-a/instances/spark-edge",
            "service_account": [
              {
                "email": "spark-edge-sa@spark-automation-1763590375.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "edge",
              "spark"
            ],
            "tags_fingerprint": "ZoiSYFKXT8Y=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc",
            "google_service_account.spark_edge"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "master",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "SEV_CAPABLE",
                  "SEV_SNP_CAPABLE",
                  "SEV_LIVE_MIGRATABLE",
                  "SEV_LIVE_MIGRATABLE_V2",
                  "IDPF",
                  "TDX_CAPABLE",
                  "UEFI_COMPATIBLE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20251120",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/spark-automation-1763590375/zones/us-central1-a/disks/spark-master"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-11-21T15:42:18.743-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/spark-automation-1763590375/zones/us-central1-a/instances/spark-master",
            "instance_id": "4547287689892546101",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQCrSUbxFuahyP9ta45nK8oe916Svu5H0JXiVvnz85gc37R61QNvYq3vE3xJ7MA2kqxPHHjlDlVKx6FlD41lQBdhXBSfZ1k5jfygcUz2iYZ/6utaSQibCyCdwO1VmLkjrzg0vV99XIFPIMF4JmEyTvON8rrbXBMOKAo2V94cLSLwdSkCn10ProOUdRHOq3OmjYS4ZJeMw7sr1Pvu5jWAfduOlHx2ZqgqnA46283EZuq7Vld7FKeGb2zjrtGD6WMo1mvt4WvAoBf/Fmntop3CgXQhm+/nR8LapnK18d7xJcZcRGozdQycOSEW66Hx0U1bJ/7bcoKtwleMWNUCvwX0qjrDiSMiD0dVk9GdmzlYPrfDJPOivTme2TWMi27s52ozUTzcEhJTeBlBBWCcRcBmAi4VAlCMGYoQDhYXHe6lH5x1JT [...]
            },
            "metadata_fingerprint": "qAxAOUUeVpU=",
            "name": "spark-master",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.222.73.137",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/spark-automation-1763590375/global/networks/spark-vpc",
                "network_ip": "10.128.0.5",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/spark-automation-1763590375/regions/us-central1/subnetworks/spark-vpc",
                "subnetwork_project": "spark-automation-1763590375"
              }
            ],
            "project": "spark-automation-1763590375",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/spark-automation-1763590375/zones/us-central1-a/instances/spark-master",
            "service_account": [
              {
                "email": "spark-master-sa@spark-automation-1763590375.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "master",
              "spark"
            ],
            "tags_fingerprint": "v7hG63_wPPU=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc",
            "google_service_account.spark_master"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "SEV_CAPABLE",
                  "SEV_SNP_CAPABLE",
                  "SEV_LIVE_MIGRATABLE",
                  "SEV_LIVE_MIGRATABLE_V2",
                  "IDPF",
                  "TDX_CAPABLE",
                  "UEFI_COMPATIBLE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20251120",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/spark-automation-1763590375/zones/us-central1-a/disks/spark-worker-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-11-21T15:42:17.584-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/spark-automation-1763590375/zones/us-central1-a/instances/spark-worker-1",
            "instance_id": "1864803609624790582",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQCrSUbxFuahyP9ta45nK8oe916Svu5H0JXiVvnz85gc37R61QNvYq3vE3xJ7MA2kqxPHHjlDlVKx6FlD41lQBdhXBSfZ1k5jfygcUz2iYZ/6utaSQibCyCdwO1VmLkjrzg0vV99XIFPIMF4JmEyTvON8rrbXBMOKAo2V94cLSLwdSkCn10ProOUdRHOq3OmjYS4ZJeMw7sr1Pvu5jWAfduOlHx2ZqgqnA46283EZuq7Vld7FKeGb2zjrtGD6WMo1mvt4WvAoBf/Fmntop3CgXQhm+/nR8LapnK18d7xJcZcRGozdQycOSEW66Hx0U1bJ/7bcoKtwleMWNUCvwX0qjrDiSMiD0dVk9GdmzlYPrfDJPOivTme2TWMi27s52ozUTzcEhJTeBlBBWCcRcBmAi4VAlCMGYoQDhYXHe6lH5x1JT [...]
            },
            "metadata_fingerprint": "qAxAOUUeVpU=",
            "name": "spark-worker-1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "136.112.234.105",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/spark-automation-1763590375/global/networks/spark-vpc",
                "network_ip": "10.128.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/spark-automation-1763590375/regions/us-central1/subnetworks/spark-vpc",
                "subnetwork_project": "spark-automation-1763590375"
              }
            ],
            "project": "spark-automation-1763590375",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/spark-automation-1763590375/zones/us-central1-a/instances/spark-worker-1",
            "service_account": [
              {
                "email": "spark-worker-sa@spark-automation-1763590375.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "spark",
              "worker"
            ],
            "tags_fingerprint": "9jtDfyBb2A0=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc",
            "google_service_account.spark_worker"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "SEV_CAPABLE",
                  "SEV_SNP_CAPABLE",
                  "SEV_LIVE_MIGRATABLE",
                  "SEV_LIVE_MIGRATABLE_V2",
                  "IDPF",
                  "TDX_CAPABLE",
                  "UEFI_COMPATIBLE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20251120",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/spark-automation-1763590375/zones/us-central1-a/disks/spark-worker-2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-11-21T15:42:18.546-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/spark-automation-1763590375/zones/us-central1-a/instances/spark-worker-2",
            "instance_id": "8548249764218357301",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQCrSUbxFuahyP9ta45nK8oe916Svu5H0JXiVvnz85gc37R61QNvYq3vE3xJ7MA2kqxPHHjlDlVKx6FlD41lQBdhXBSfZ1k5jfygcUz2iYZ/6utaSQibCyCdwO1VmLkjrzg0vV99XIFPIMF4JmEyTvON8rrbXBMOKAo2V94cLSLwdSkCn10ProOUdRHOq3OmjYS4ZJeMw7sr1Pvu5jWAfduOlHx2ZqgqnA46283EZuq7Vld7FKeGb2zjrtGD6WMo1mvt4WvAoBf/Fmntop3CgXQhm+/nR8LapnK18d7xJcZcRGozdQycOSEW66Hx0U1bJ/7bcoKtwleMWNUCvwX0qjrDiSMiD0dVk9GdmzlYPrfDJPOivTme2TWMi27s52ozUTzcEhJTeBlBBWCcRcBmAi4VAlCMGYoQDhYXHe6lH5x1JT [...]
            },
            "metadata_fingerprint": "qAxAOUUeVpU=",
            "name": "spark-worker-2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.238.187.33",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/spark-automation-1763590375/global/networks/spark-vpc",
                "network_ip": "10.128.0.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/spark-automation-1763590375/regions/us-central1/subnetworks/spark-vpc",
                "subnetwork_project": "spark-automation-1763590375"
              }
            ],
            "project": "spark-automation-1763590375",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/spark-automation-1763590375/zones/us-central1-a/instances/spark-worker-2",
            "service_account": [
              {
                "email": "spark-worker-sa@spark-automation-1763590375.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "spark",
              "worker"
            ],
            "tags_fingerprint": "9jtDfyBb2A0=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc",
            "google_service_account.spark_worker"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/spark-automation-1763590375/global/networks/spark-vpc",
            "mtu": 0,
            "name": "spark-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "6663725892642883150",
            "numeric_id": "6663725892642883150",
            "project": "spark-automation-1763590375",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/spark-automation-1763590375/global/networks/spark-vpc"
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}